Omit q10 from the set of queries.
This query just spews a lot of exceptions for me.